@@ -1,3 +1,12 @@
+2004-08-24  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b126
+
+	* Fix:  Long filename / disclosure fix
+
+	* Fix:  Sorting by caption ignored albums, because they have no "caption"
+	  It now sorts them by their titles.
+
+	* Change: Add getGUID() to prevent code repetition
+
 2004-08-20  Chris Kelly <ckdake@users.sf.net> 1.4.5-cvs-b125
 
 	* Change:  different div tags in login.php as well as centered text 
